# opensnp_project10

./: .coverage  .gitignore  01_create_mapping.py  02_ancestry_grouping.py  03_data_prep.py  04_build_verification.py  05_plink_conversion.py  06_merge.py  07_qc_ld_ibs.py  08_visualizations.py  09_network_analysis.py  ANALYSIS_DISCUSSION.md  CHANGES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  LICENSE  NETWORK_ANALYSIS_SUMMARY.md  PRESENTATION_README.md  Project 10 Genetic Similarity Network.docx  QUICK_REFERENCE.md  README.md  REVIEW_NOTES.md  SUMMARY_FOR_REVIEWER.txt  VISUALIZATIONS_GUIDE.md  VISUALIZATION_SUMMARY.txt  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py  setup.py  verify_changes.sh
data/: README.md
docs/: installation.md  troubleshooting.md
lib/: __init__.py  ancestry_keywords.py  ibs.py  network.py  parsing.py  plink.py  validation.py
tests/: __init__.py  conftest.py  test_ancestry_classification.py  test_ibs.py  test_ibs_annotate.py  test_network.py  test_parsing.py  test_parsing_ftdna.py  test_validation.py
