[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "opensnp-project10"
version = "1.0.0"
description = "Genetic Similarity Network & Cryptic Relatedness in OpenSNP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "kmcerr"}]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "networkx>=2.8",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
]

[project.scripts]
opensnp-pipeline = "run_pipeline:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
